# T.E.S.S-RPI-LINUX

./: .secrets  LICENSE  README.md  main.py  pyproject.toml  replit.nix
ADMINISTRATOR/: .version
ADMINISTRATOR/Apps/: CaesarCipher.py  Calculator.py  InvoiceCreator.py  PasswordStrengthChecker.py  PhoneNumberInformation.py  StockData.py  Wikipedia.py
ADMINISTRATOR/Documents/: example.txt
ADMINISTRATOR/Games/: BlackJack.py  BuckshotRoulette.py  Dungeons.py  GuessTheNumber.py  Minesweeper.py  RockPaperScissors.py  Tic_Tac_Toe.py  TreasureHunt.py  TwoDicePig.py
ADMINISTRATOR/Messages/: update.txt
