[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
forex-python = "^1.8"
bs4 = "^0.0.1"
psutil = "^5.9.8"
ip2geotools = "^0.1.6"
faker = "^23.2.1"
pandas = "^2.2.1"
yfinance = "^0.2.37"
colorama = "^0.4.6"
cryptography = "^42.0.5"
wikipedia = "^1.4.0"
pwinput = "^1.0.3"
discord-webhook = "^1.3.1"
replit = "^4.0.0"
phonenumbers = "^8.13.38"
alive-progress = "^3.2.0"
requests = "2.32.3"
speedtest = "^0.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"